# language_learning

./: .gitignore  README.md  README_wiki_corpus.md  construct_embeddings.py  create_wiki_corpus.py  create_wiki_corpus_simple.py  demo.py  demo2.py  download_books.py  index_german_books.py
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  styles.css
language-ui/: API_CONFIG.md  package-lock.json  package.json
language-ui/src/: AnalysisPage.js  App.js  AppRouter.js  BooksPage.js  EmbeddingsModal.js  LandingPage.js  PlayGround.js  RSSPage.js  RSSPageStyles.css  TranslationPage.js  YoutubePage.js
language-ui/src/components/: BookCard.js  BookStats.js  ConfirmDialog.js  LanguageSelector.js  Modal.js
language-ui/src/components/analysis/: WordFrequencySection.js  WordSearchSection.js
language-ui/src/components/chat/: ChatAssistant.js
language-ui/src/components/common/: LanguagePairSelector.js  MessageDisplay.js  Pagination.js  SectionCard.js  (+1 more)
language-ui/src/config/: api.js
language-ui/src/hooks/: useBooks.js  useDataFetching.js  usePaginatedBooks.js  useSpeech.js
language_app/: .env  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  books_cache.json  docker-compose.yml  pyproject.toml  pytest.ini
language_app/app/: book_manager.py  embeddings_analyzer.py  es_utils.py  main.py  quality_checker.py  scheduler.py  schema.py  translation.py  validators.py  youtube_handler.py
language_app/config/: rss.json
notebooks/: Oumi - Simple Judge.ipynb
scripts/: create_wiki_corpus.py  index_german_books.py
(+6 files in other folders)
